# CMakeSamples

DynamicLinkLibrary/: CMakeLists.txt  MiBiblioteca.h  MiBibliotecaGlobal.h
Qt5Example/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
StaticLinkLibrary/: CMakeLists.txt  MiBiblioteca.cpp  MiBiblioteca.h
